# app

./: .gitignore  Cargo.toml  README.md  bump-version.sh  content-core.js  content-protect.js  content-risk.js  content.css  manifest.json  test.html
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/db/: connection.rs
backend/handlers/: analyze.rs  auth.rs  dashboard.rs  fraud_reports.rs  sellers.rs
backend/models/: analyses.rs  analysis.rs  fraud_reports.rs  helpers.rs  history.rs  listings.rs  mod.rs  sellers.rs  users.rs
backend/routes/: analyze.rs  auth.rs  dashboard.rs  fraud_reports.rs  mod.rs  sellers.rs
backend/services/: analysis.rs  auth.rs  claude.rs  email.rs  fraud_reports.rs  google_oauth.rs  history.rs  listings.rs  mod.rs  scoring.rs  sellers.rs  signals.rs
backend/src/: main.rs
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/js/: auth.js  dashboard.js  detail_view.js  history.js  init.js  profile.js  settings.js  shared.js
extension/: manifest.json  test.html
extension/css/: base.css  intelligence_tab.css  panel.css  panel_shell.css  polish.css  protect_tab.css  risk_tab.css  toolbar.css
extension/js/: auth-bridge.js  background.js
js/: content-intelligence.js  content-protect.js  content-risk.js
migrations/: 0000_types.sql  0001_sellers.sql  0002_listings.sql  0003_analyses.sql  0003_users.sql  0004_analysis.sql  0004_fraud_reports.sql  0005_fraud_reports.sql  0009_last_active.sql  0010_report_listing_url.sql  0011_login_method.sql  0012_avatar_url.sql
site/: index.html  signin.html
site/css/: base.css  cta_footer.css  faq.css  features.css  hero.css  how_it_works.css  landing.css  modals.css  nav.css  pricing.css  responsive.css  signin.css
site/js/: landing.js  signin.js
src/: lib.rs
static/: manifest.json  test.html
wasm/: Cargo.toml
(+18 files in other folders)
