[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
# chrono-tz = "0.10.4"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid", "tls-native-tls", "chrono", "macros"] }
time = "0.3.53"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "cors", "set-header"] }
urlencoding = "2.1.3"
uuid = { version = "1.23.3", features = ["serde", "v7", "v4"] }
